--- a/indexhamcari.html
+++ b/indexhamcari.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    header
+</header>
+<div class="gallery">
+    <img src="image1.jpt" alt="">
+</div>
 <body>
     < footer>
         acount2 added this
